--- a/ChartSongFinder/ChartSongFinder.csproj
+++ b/ChartSongFinder/ChartSongFinder.csproj
@@ -49,7 +49,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SongFinder.cs" />
+    <Compile Include="Radio1ChartSongFinder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
